--- a/src/css/home.css
+++ b/src/css/home.css
@@ -184,7 +184,7 @@
     translate: -25px -30px;
 }
 
-.siDesc .sltad{
+.sltad{
     padding: 10px 20px;
     font-size: 0.7rem;
     font-weight: bold;
@@ -220,6 +220,10 @@
 }
 
 /* Event Listing */
+.eventListing{
+    background-color: #f7f7f7;
+}
+
 .elInner{
     width: 75%;
     margin: auto;
@@ -269,6 +273,13 @@
 }
 
 /* Previous Events  */
+.elWindow{
+    overflow: hidden;
+    /* border: 1px solid black; */
+    width: 93%;
+    margin: auto;
+}
+
 .elEvents {
     /* border: 1px solid black; */
     display: flex;
@@ -286,9 +297,87 @@
 }
 
 .elEve{
-    border: 1px solid black;
-    width: 500px;
-    height: 150px;
+    /* border: 1px solid black; */
+    background-color: white;
+    width: 460px;
+    height: 200px;
+    padding: 10px;
+    box-shadow: 0px 5px 10px 0px lightgray;
+    /* border-radius: 5px; */
+    cursor: pointer;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    position:relative;
+}
+
+.dni{
+    display: flex;
+    height: 100%;
+    width: 47%;
+}
+
+.dni img{
+    width: 98%;
+    height: 100%;
+}
+
+.dni .siDate{
+    top: 10px;
+    left: 10px;
+}
+
+.orLine{
+    width: 4px;
+    height: 60px;
+    background: #fece00;
+    /* position: relative; */
+    /* z-index: 1; */
+    margin-top: 10px;
+    margin-left: -2px;
+}
+
+.eleDesc{
+    width: 50%;
+    padding: 10px;
+}
+
+.eleDesc .slt{
+    background-color: #fdc800;
+    width: 20px;
+    height: 20px;
+}
+
+.eleDesc .slt img{
+    width: 12px;
+}
+
+.eleDesc h2{
+    font-size: 1rem;
+    font-weight: 800;
+}
+
+.ticketPrice{
+    font-size: 0.7rem;
+    font-weight: 800;
+    color: #fdc800;
+    margin-top: 10px;
+}
+
+.eleDesc button{
+    color: #afafaf;
+    border: none;
+    border-radius: 50px;
+    background: #f8f8f8;
+    padding: 10px 20px;
+    font-size: 0.7rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.1s ease-in;
+}
+
+.eleDesc button:hover{
+    box-shadow: 1px 1px 5px 0px lightgray;
 }
 
 .ELbtns{
@@ -317,4 +406,7 @@
 .ELbtns button:hover{
     background-color:#ffe5da;
     color: #ff4e00;
+    color: #ffc52b;
 }
+
+
