--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10,6 +10,7 @@
 
 a{
     text-decoration: none;
+    color: black;
 }
 
 .lae{
@@ -119,6 +120,7 @@ a{
 }
 
 .siDesc{
+    color: black;
     width: 100%;
     height: 100%;
     background: white;
@@ -263,6 +265,23 @@ a{
     cursor: pointer;
     /* border: 1px solid black; */
     padding: 5px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.underline{
+    width: 0;
+    /* width: 100%; */
+    height: 1.5px;
+    background-image: linear-gradient(145deg, #ff3600, 10%, #ffc52b, 90%, #ff3600);
+    transition: 0.3s ease-in;
+    margin-top: 5px;
+}
+
+.me-ev li:hover .underline{
+    width: 100%;
 }
 
 
