--- a/src/css/home.css
+++ b/src/css/home.css
@@ -13,6 +13,242 @@ a{
     color: black;
 }
 
+input, select, textarea{
+    outline: none;
+}
+
+.navbarMain{
+    /* border: 1px solid black; */
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+}
+
+.navbar{
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 65%;
+    margin: auto;
+    position: relative;
+    /* background-color: rgba(0, 0, 0, 0.237);
+    backdrop-filter: blur(10px); */
+    padding: 0 20px;
+}
+
+.logo{
+    /* border: 1px solid black; */
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    /* aspect-ratio: 1/1; */
+}
+
+.navComps{
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    width: 450px;
+}
+
+.navComps li{
+    list-style: none;
+    color: white;
+    /* border: 1px solid black; */
+}
+
+.pnsLink{
+    display: flex;
+    gap: 15px;
+    
+}
+
+.navComps li{
+    /* border: 1px solid black; */
+    font-weight: 500;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.navComps li:hover{
+    color: #ff3600;
+}
+
+.navComps .pns{
+    border: 1px solid #ff4e00;
+    /* border: none; */
+    background-image: linear-gradient(145deg, #ff3600, 70%, #ffc52b);
+    padding: 5px 8px;
+    border-radius: 40px;
+    cursor: pointer;
+    box-shadow: 0px 1px 10px 0px #ff4e00;
+    transform: translateY(0);
+    transition: all 0.2s ease-in-out;
+}
+
+.pns img{
+    width: 15px;
+    /* height: 40px; */
+    /* padding: 10px; */
+}
+
+.pns:hover{
+    transform: translateY(-5px);
+}
+
+.searchBox{
+    /* border: 1px solid black; */
+    border: none;
+    padding: 10px 15px;
+    border-radius: 30px;
+    box-shadow: 0px 1px 7px 0px #ff4e00;
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    width: 35px;
+    transition: all 0.3s ease-in-out;
+    z-index: -1;
+}
+
+/* Home Slider */
+.homeSlider{
+    /* border: 1px solid black; */
+}
+
+.slide img{
+    width: 100%;
+    height: 100svh;
+    position: absolute;
+}
+
+.slide{
+    /* background-color: black; */
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cover{
+    width: 100%;
+    height: 100svh;
+    background-color: rgba(0, 0, 0, 0.505); 
+    position: absolute;
+    z-index: 1;
+}
+
+.slideDesc, .sdBtns{
+    position: relative;
+    z-index: 1;
+}
+
+.slideDesc{
+    color: white;
+}
+
+.slideDesc h1{
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.slideDesc p{
+    font-size: 1rem;
+    margin: 20px 0;
+    font-weight: 600;
+}
+
+.sldDesc{
+    /* border: 1px solid black; */
+    position: absolute;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sdBtns{
+    /* border: 1px solid white; */
+    display: flex;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.sdBtns button{
+    box-shadow: 0px 5px 10px 0px gray;
+}
+
+.sdBtns .gs{
+    background-image: none;
+    background-color: transparent;
+    border: 3px solid #ff4e00;
+}
+
+.slidermain {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* flex-direction: column; */
+    cursor: pointer;
+    z-index: 5;
+    position: relative;
+  }
+  
+  .sliderwindow {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    overflow: hidden;
+  }
+  
+  .simages {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    transition: 1s ease-in-out;
+  }
+  
+  .simages img {
+    height: 100%;
+    width: 100vw;
+    position: relative;
+    opacity: 0.8;
+  }
+  
+  .sliderbtns {
+    position: absolute;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1;
+    opacity: 0.5;
+  }
+
+  .sliderbtns .right{
+    transform: rotate(180deg);
+  }
+
+  .sldBtn{
+    background-color: #000000;
+    display: flex;
+    border-radius: 50px;
+  }
+  
+  .sldBtn img {
+    width: 40px;
+    padding: 10px;
+    /* border: 1px solid black; */
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.703);
+  }
+
 .lae{
     /* border: 1px solid black; */
     display: flex;
