created profile page

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -792,6 +792,7 @@ input, select, textarea{
     cursor: pointer;
     transition:  0.3s ease-in-out;
     transform: translateY(0);
+    background-color: #ffad89;
 }
 
 .backBtn:hover{
