--- a/src/css/eventPage.css
+++ b/src/css/eventPage.css
@@ -21,14 +21,19 @@
     font-size: x-large;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 20px ;
+}
+.description p{
+    padding-bottom: 10px;
+    font-size: .9rem;
 }
 .poster img {
     max-width: 100%;
     height: 100%;
     border-radius: 15px;
 }
-p {
-    font-size: .9rem;
+.event-info h3{
+    padding-bottom: 10px;
 }
 
 .register-button {
@@ -49,27 +54,53 @@ p {
     color: white;
 }
 
-
-.share-button {
+.shareBtn {
     position: absolute;
     top: 15px;
     left: 15px;
-    z-index: 2; 
-}
-
-.share-button button {
-    padding: 8px 10px;
-    background-color: orange;
-    color: rgb(0, 0, 0);
+    z-index: 2;
+  }
+  
+  .shareBtn button {
+    padding: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+    background-image: linear-gradient(145deg, #ff3600, 70%, #ffc52b);
+    color: white;
+    border-radius: 50px;
     border: none;
-    border-radius: 25px;
+    box-shadow: 0px 5px 15px 0px gray;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-size: 15px;
-}
+  }
+  
+  .shareBtn button img {
+    width: 20px; 
+    height: 20px; 
+    margin-right: 5px; 
+  }
 
-.share-button button:hover {
-    background-color: #4374a8; 
-}
 
+  .like-button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 
+  }
+  
+  .like-button img {
+    width: 30px;
+    height: 30px;
+ 
+  }
+  
+  
+  
+  
+  
+  
+  
+  
