--- a/src/css/home.css
+++ b/src/css/home.css
@@ -8,6 +8,25 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* Track */
+::-webkit-scrollbar {
+  width: 8px; /* width of the scrollbar */
+  background-color: transparent;
+  
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(145deg, #ff3600, 70%, #ffc52b); /* color of the scrollbar handle */
+  border-radius: 10px; /* roundness of the scrollbar handle */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(145deg, #ff2900, 70%, #ffbb00); /* color of the scrollbar handle on hover */
+}
+
+
 a{
     text-decoration: none;
     color: black;
@@ -38,12 +57,12 @@ input, select, textarea{
 }
 
 .logo{
-    /* border: 1px solid black; */
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    /* aspect-ratio: 1/1; */
+    padding-top: 1rem;
+    width: 125px;
+    height: 85px;
 }
+
+
 
 .navComps{
     /* border: 1px solid black; */
@@ -906,6 +925,53 @@ input, select, textarea{
     transform: rotate(90deg);
 }
 
+
+
+
+
+/* Collage Listing */
+.collegeListing{
+  text-align: center;
+  padding: 50px 0;
+  background-color: #f7f7f7;
+}
+
+.college-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  padding: 2rem 15rem;
+}
+
+.college-card {
+  display: flex;
+  /* border: 1px solid #ccc; */
+  overflow: hidden;
+  overflow: hidden;
+  box-shadow: 0 16px 18px rgba(0, 0, 0, 0.1); /* Add box shadow */
+}
+
+.college-image {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+}
+
+.college-info{
+  padding: 10px;
+}
+
+.college-info h2{
+  text-align: left;
+  font-size: 18px;
+}
+
+.college-info p{
+  text-align: left;
+  padding-top: 10px;
+  font-size: 15px;
+}
+
 /* Footer css */
 
 /* Global Classes */
@@ -927,11 +993,10 @@ footer.footer{
     height: 100%;
     background: #0f0f0f;
     position: relative;
-    margin-top: 1rem;
   }
   footer.footer .container{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);  /* 1fr 1fr 1fr 1fr */  /*25% 25% 25% 25% */
+    grid-template-columns: repeat(5, 1fr);  /* 1fr 1fr 1fr 1fr */  /*25% 25% 25% 25% */
   }
   
   footer.footer .container > div{
@@ -968,24 +1033,68 @@ footer.footer{
     padding-left: .4rem;
   }
 
-  footer.footer .newsletter .form-element{
-    background: black;
-    display: inline-block;
+
+
+  footer.footer .newsletter {
+    display: flex;
+    flex-direction: column;
   }
-  footer.footer .newsletter .form-element input{
-    padding: .5rem .7rem;
+  
+  footer.footer .newsletter p {
+    display: inline;
+    align-items: center;
+   margin: 2px;
+  }
+  
+  footer.footer .newsletter .form-element {
+    padding: 0.2rem;
+    border-radius: 10px;
+   
+  }
+  
+  footer.footer .newsletter .form-element input,
+  footer.footer .newsletter .form-element textarea {
+    width: 95%;
+    padding: 0.5rem;
+    margin-bottom: 0.2rem;
     border: none;
-    background: transparent;
-    color: #ffffff;
-    font-family: var(--Josefin);
-    font-size: 1rem;
-    width: 74%;
+    border-radius: 5px;
+    background: #333;
+    color: #fff;
+    font-family: var(--Lexend);
+    font-size: 0.7rem;
   }
-  footer.footer .newsletter .form-element span{
-    background: linear-gradient(100deg, rgb(255, 165, 0) 4%, #cde1ea 100%);
-    padding: .5rem 1rem;
+  
+  footer.footer .newsletter .form-element textarea {
+    resize: vertical;
+  }
+  
+  footer.footer .newsletter .form-element button {
+    width: 40%;
+    padding: 0.3rem;
+    border: 1px solid orange;
+    border-radius: 5px;
+    color: orange;
     cursor: pointer;
+    align-items: center;
+    background-color: black;
+    font-family: var(--Abel);
   }
+  
+  footer.footer .newsletter .form-element button:hover {
+    background-color: orange;
+    color: white;
+  }
+  
+  footer.footer .newsletter .form-element span {
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+    color: #fff;
+  }
+
+
+
   footer.footer .instagram div > img{
     display: inline-block;
     width: 25%;
@@ -1032,9 +1141,37 @@ footer.footer{
   .connect-icons img{
     width: 25px;
     aspect-ratio: 1/1;
+    
     /* object-fit: cover; */
     cursor: pointer;
   }
+
+  /* Footer.css for form alert message */
+.alert {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: orange;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+    animation: slideIn 0.3s ease-out forwards;
+  }
+  
+  @keyframes slideIn {
+    from {
+      opacity: 0;
+      transform: translateX(-50%) translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(-50%);
+    }
+  }
+
   /* Footer Ends*/
 
 
