--- a/src/css/home.css
+++ b/src/css/home.css
@@ -12,7 +12,7 @@
 ::-webkit-scrollbar {
   width: 8px; /* width of the scrollbar */
   background-color: transparent;
-  
+  display: none;
 }
 
 /* Handle */
